// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders patient profile container correctly 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div>
      <div
        className={undefined}
      />
      <div
        className=""
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
            style={
              Object {
                "backgroundImage": "url('http://bit.ly/2u9bJDA')",
              }
            }
          />
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              High Risk Patient
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Unknown
              </div>
              <div
                className={undefined}
              >
                Unknown
              </div>
            </div>
            <div
              className={undefined}
            >
              Unknown
               • 
            </div>
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Date of birth
              :
            </div>
            <div
              className={undefined}
            >
              Unknown
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Preferred language
              :
            </div>
            <div
              className={undefined}
            />
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Location
              :
            </div>
            <div
              className={undefined}
            />
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Patient since
              :
            </div>
            <div
              className={undefined}
            >
              Unknown
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Medicare ID
              :
            </div>
            <div
              className={undefined}
            >
              123456789
            </div>
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
        </div>
        <div
          className={undefined}
        >
          <textarea
            className={undefined}
            disabled={true}
            onChange={[Function]}
            placeholder="Loading..."
            value={undefined}
          />
          <div
            className={undefined}
          />
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          Active medications
        </div>
        <div
          className={undefined}
        />
      </div>
      <div
        className="undefined"
      >
        <div
          className={undefined}
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className=""
            onClick={[Function]}
          >
            <div
              className={undefined}
            >
              <div
                className=""
              />
              <div
                className={undefined}
              >
                Care Team
              </div>
            </div>
            <div
              className=""
            />
          </div>
          <div
            className=""
          >
            <div>
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                >
                  <div
                    className={undefined}
                  />
                  <div
                    className={undefined}
                  >
                    <div
                      className={undefined}
                    >
                      Chat with team
                    </div>
                    <div
                      className={undefined}
                    >
                      Patient slack channel
                    </div>
                  </div>
                </div>
              </div>
              <div
                className={undefined}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className={undefined}
    >
      <a
        className="undefined"
        href="/patients/undefined/encounters"
        onClick={[Function]}
      >
        Encounters
      </a>
      <a
        className=""
        href="/patients/undefined/patientInfo"
        onClick={[Function]}
      >
        Patient Info
      </a>
      <a
        className=""
        href="/patients/undefined/tasks"
        onClick={[Function]}
      >
        Tasks
      </a>
    </div>
  </div>
</div>
`;

exports[`renders patient profile for ipad 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        />
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url('http://bit.ly/2u9bJDA')",
            }
          }
        />
        <div
          className={undefined}
        >
          Loading Patient
        </div>
        <div
          className=""
          onClick={[Function]}
        />
        <div
          className=""
          onClick={[Function]}
        />
      </div>
      <div
        className={undefined}
      >
        <div
          className=""
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="undefined"
    >
      <div>
        <div
          className={undefined}
        />
        <div
          className="undefined"
        >
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                High Risk Patient
              </div>
              <div
                className={undefined}
              >
                Unknown Unknown
              </div>
              <div
                className={undefined}
              >
                Unknown
                 • 
              </div>
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Date of birth
                :
              </div>
              <div
                className={undefined}
              >
                Unknown
              </div>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Preferred language
                :
              </div>
              <div
                className={undefined}
              />
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Location
                :
              </div>
              <div
                className={undefined}
              />
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Patient since
                :
              </div>
              <div
                className={undefined}
              >
                Unknown
              </div>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Medicare ID
                :
              </div>
              <div
                className={undefined}
              >
                123456789
              </div>
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className=""
            />
            <div
              className=""
            />
            <div
              className=""
            />
            <div
              className=""
            />
          </div>
          <div
            className={undefined}
          >
            <textarea
              className={undefined}
              disabled={true}
              onChange={[Function]}
              placeholder="Loading..."
              value={undefined}
            />
            <div
              className={undefined}
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="undefined"
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            Active medications
          </div>
          <div
            className={undefined}
          />
        </div>
        <div
          className="undefined"
        >
          <div
            className={undefined}
          >
            Loading...
          </div>
        </div>
      </div>
    </div>
    <div
      className="undefined"
    >
      <div
        className="undefined"
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            <div
              className="undefined"
              onClick={[Function]}
            >
              <div
                className={undefined}
              >
                <div
                  className="undefined"
                />
                <div
                  className={undefined}
                >
                  Care Team
                </div>
              </div>
              <div
                className="undefined"
              />
            </div>
            <div
              className="undefined"
            >
              <div>
                <div
                  className={undefined}
                >
                  <div
                    className={undefined}
                  >
                    <div
                      className={undefined}
                    />
                    <div
                      className={undefined}
                    >
                      <div
                        className={undefined}
                      >
                        Chat with team
                      </div>
                      <div
                        className={undefined}
                      >
                        Patient slack channel
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className={undefined}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className=""
      onClick={[Function]}
    />
  </div>
  <div
    className="undefined"
  >
    <div
      className={undefined}
    >
      <a
        className="undefined"
        href="/patients/undefined/encounters"
        onClick={[Function]}
      >
        Encounters
      </a>
      <a
        className=""
        href="/patients/undefined/patientInfo"
        onClick={[Function]}
      >
        Patient Info
      </a>
      <a
        className=""
        href="/patients/undefined/tasks"
        onClick={[Function]}
      >
        Tasks
      </a>
    </div>
  </div>
</div>
`;
